Test/String/Contains.lean
import Smt

theorem contains : "a".contains 'a' := by
  smt_show
  sorry
